--- a/soundfont.html
+++ b/soundfont.html
@@ -6,17 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Elm 0.17 ports sample</title>
- 
+
 
   </head>
-  <body>  
+  <body>
     <div id="elmSoundFont"></div>
-    <script src="js/note.split.js"></script>
-    <script src="js/note.parse.js"></script>
-    <script src="js/note-midi.js"></script>
-    <script src="js/b64decode.js"></script>
-    <script src="js/decode-buffer.js"></script>
-    <script src="js/load-bank.js"></script>
+    <script src="js/soundfont-player.js"></script>
     <script src="js/elmSoundFont.js"></script>
     <script>
     var node = document.getElementById('elmSoundFont');
@@ -25,4 +20,3 @@
     <script src="js/nativeSoundFont.js"></script>
   </body>
 </html>
-
