Moved the myapp definition out of the js
and in to the html page.  This is needed for portability.  Still not at all sure how I ought to package the finished article.

--- a/soundfont.html
+++ b/soundfont.html
@@ -15,6 +15,7 @@
     <script src="js/elmSoundFont.js"></script>
     <script>
     var node = document.getElementById('elmSoundFont');
+    var myapp = Elm.SoundFont.embed(node);
     <!-- the javascript below is written to accept an initial parameter named node-->
     </script>
     <script src="js/nativeSoundFont.js"></script>
