Added MIDI file player
and restructured the code to allow for better packaging to aid in distribution.

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <div id="elmSoundFont"></div>
-    <script src="js/soundfont-player.js"></script>
-    <script src="js/elmSoundFont.js"></script>
+    <script src="../js/soundfont-player.js"></script>
+    <script src="distjs/elmSoundFont.js"></script>
     <script>
     var node = document.getElementById('elmSoundFont');
     var myapp = Elm.SoundFont.embed(node);
     <!-- the javascript below is written to accept an initial parameter named node-->
     </script>
-    <script src="js/nativeSoundFont.js"></script>
+    <script src="../js/nativeSoundFont.js"></script>
   </body>
 </html>
