Upgrade to elm 0.18
Mend the controller player so it really does play track 0 of a multi-track MIDI type-1 file.

--- a/examples/controlledplayer.html
+++ b/examples/controlledplayer.html
@@ -19,5 +19,6 @@
     <!-- the javascript below is written to accept an initial parameter named node-->
     </script>
     <script src="../js/nativeSoundFont.js"></script>
+    <script src="js/nativeBinaryFileIO.js"></script>
   </body>
 </html>
