--- a/examples/simpleplayer.html
+++ b/examples/simpleplayer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Elm 0.17 ports sample</title>
+    <title>Elm 0.18 ports sample</title>
 
 
   </head>
@@ -19,5 +19,6 @@
     <!-- the javascript below is written to accept an initial parameter named node-->
     </script>
     <script src="../js/nativeSoundFont.js"></script>
+    <script src="js/nativeBinaryFileIO.js"></script>
   </body>
 </html>
